# sinplealang

./: README.md
crates/sinplealang/: Cargo.toml
crates/sinplealang-cli/: Cargo.toml
crates/sinplealang-cli/src/: main.rs
crates/sinplealang/src/: binding_def.rs  env.rs  expr.rs  lib.rs  stmt.rs  val.rs
crates/sinplealang/src/expr/: block.rs
src/: binding_def.rs  env.rs  expr.rs  lib.rs  utils.rs  val.rs
src/expr/: binding_usage.rs  block.rs
