[package]
name = "sinplealang-cli"
version = "0.1.0"
authors = ["arioz0330 <arios2@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sinplealang = {path = "../sinplealang"}
bare-io = {version = "0.2.1", features = ["alloc", "nightly"]}